[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"
authors = ["Usama Ali"]

[dependencies]
clap                    = { version = "3.0" }
dotenv                  = { version = "0.15.0" }
log                     = { version = "0.4.14" }
reqwest                 = { version = "0.12",    features = ["json"] }
tokio                   = { version = "1",       features = ["full"] }
serde                   = { version = "1.0",    features = ["derive"] }
serde_json              = { version = "1.0.115" }
prettytable             = { version = "0.10.0" }
